<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fynal Rep Demo</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
    <string name="sign_in_back">Sign In</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_a_password">Enter Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="next_page">next page</string>
    <string name="enter_a_username">Enter Username</string>
    <string name="begin_workout">Begin Workout</string>
    <string name="find_word">Find Word</string>
    <string name="keyword_detection_test">keyword detection test</string>
    <string name="menu_premium">Go Premium</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_title">Menu</string>
    <string name="exercise_hint">Exercise</string>
    <string name="exercise_rep">Rep Count</string>
    <string name="exercise_weight">Weight</string>
    <string name="exercise_set">Set Count</string>
    <string name="addExercise_button">Add Exercise</string>
    <string name="chest_button">Chest Workout</string>
    <string name="strength_button">Strength Workout</string>
    <string name="leg_button">Leg Workout</string>
    <string name="custom_button">Custom Workout</string>
    <string name="upper_button">Upper Body Strength</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign UP</string>
    <string name="WaitForVoiceAssistant">Wait for Voice Assistant</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="enter_username">Enter Username</string>
    <string name="default_web_client_id_copy">1084996706633-csfeol84n1td26gbrq7ra9lngvonemvr.apps.googleusercontent.com</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="save_and_quit">Save and Quit</string>
    <string name="sign_out">Sign Out</string>

</resources>
