<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/colorButton"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/signUpBack"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="668dp"
        android:fontFamily="@font/aldrich"
        android:gravity="start"
        android:text="@string/sign_in_back"
        android:textColor="@color/colorButton"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="210dp"
        android:layout_marginTop="67dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_full_name"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:theme="@style/Theme.White"
            android:textColorHint="@color/white"
            android:hint="@string/enter_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email_address"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:theme="@style/Theme.White"
            android:textColorHint="@color/white"
            android:hint="@string/enter_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:theme="@style/Theme.White"
            android:textColorHint="@color/white"
            android:hint="@string/enter_a_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="411dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/reg_create_account_btn"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="371dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/aldrich"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>