<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/aldrich"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/ExName"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/aldrich"
        android:gravity="start"
        android:text="Exercise:"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exSet"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/aldrich"
        android:gravity="start"
        android:text="Set Count:"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exRep"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/aldrich"
        android:gravity="start"
        android:text="Rep Count:"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exWeight"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/aldrich"
        android:gravity="start"
        android:text="Weight:"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button_exercise"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/aldrich"
        android:text="Delete Exercise"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_button_exercise"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/aldrich"
        android:text="Edit Exercise"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="@string/exercise_hint"
        android:background="@color/white"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="@string/exercise_hint"
        android:inputType="text"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <EditText
        android:id="@+id/exercise_set"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="@string/exercise_set"
        android:background="@color/white"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="@string/exercise_set"
        android:inputType="number"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/exercise_rep"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="@string/exercise_set"
        android:background="@color/white"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="@string/exercise_rep"
        android:inputType="number"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <EditText
        android:id="@+id/exercise_weight"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:autofillHints="@string/exercise_weight"
        android:background="@color/white"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="@string/exercise_weight"
        android:inputType="number"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />



</androidx.constraintlayout.widget.ConstraintLayout>